[package]
name = "index-html-server"
version = "0.1.0"
authors = ["yinyanlv <yanlv.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.4"
actix-files = "0.1.3"
serde_json = "1.0.40"
clap = "2.33.0"
lazy_static = "1.3.0"