[package]
name = "index-html-server"
version = "0.1.0"
authors = ["yinyanlv <yanlv.yin@gmail.com>"]
edition = "2018"

description = "Server for index.html"
keywords = ["server", "index", "html", "static", "frontend"]
homepage = "https://github.com/yinyanlv/index-html-server"
repository = "https://github.com/yinyanlv/index-html-server"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.4"
actix-files = "0.1.3"
serde_json = "1.0.40"
clap = "2.33.0"
lazy_static = "1.3.0"